<resources>
    <string name="app_name">Switcharoo</string>
    <string name="hint_title">Title</string>
    <string name="hint_description">Description</string>
    <string name="hint_monetary_value">Monetary Value</string>
    <string name="hint_add_picture">Add a Picture</string>
    <string name="heading_post_item">Post an Item</string>
    <string name="button_post">Post A New Item</string>
    <string name="button_browse">Browse Items</string>
    <string name="button_matches">Trades In Progress</string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
